# ContextForge

./: README.md  Rules.md  build.bat  main.py  pyproject.toml
assets/: README.txt
core/: adapters.py  analyzer.py  generator.py  storage.py
ui/: main_window.py
ui/pages/: generate_page.py  improve_page.py  rate_page.py
ui/widgets/: rules_viewer.py
