[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextforge"
version = "0.1.0"
description = "Generates optimised AI context files for Cursor, Windsurf, and Antigravity"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "pathspec>=0.12.0",
    "google-generativeai>=0.5.0",
    "pyinstaller>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "ui"]

[project.scripts]
contextforge = "main:main"
